plugins/xpath/xpath-lang/testData/xpath/highlighting/types/intSeqToStringSeq.xpath2
string-join(<error descr="Expected type 'xs:string*', got 'xs:integer*'">index-of(('1', '2'), '1')</error>, ' ')